feat: switch to clerk auth
